--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -1,16 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <OutputType>WinExe</OutputType>
-        <TargetFramework>net8.0-windows</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <UseWPF>true</UseWPF>
-    </PropertyGroup>
+  <PropertyGroup>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net8.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
+    <UseWPF>true</UseWPF>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <EnableDynamicLoading>true</EnableDynamicLoading> <!-- Для загрузки плагинов -->
+    <ProjectGuid>{66F5C494-8BCA-44B6-BD08-95835ACAE517}</ProjectGuid> <!-- Добавлено здесь -->
+  </PropertyGroup>
 
+  <ItemGroup>
+    <!-- Основные зависимости -->
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    
+    <!-- Для работы с плагинами -->
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+  </ItemGroup>
+
+  <!-- Автоматическое копирование плагинов в выходную директорию -->
+  <Target Name="CopyPlugins" AfterTargets="Build">
     <ItemGroup>
-      <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PluginFiles Include="..\TrapezoidPlugin\bin\$(Configuration)\net8.0-windows\*.dll"/>
     </ItemGroup>
+    <Copy SourceFiles="@(PluginFiles)" DestinationFolder="$(OutputPath)\Plugins\" />
+  </Target>
 
 </Project>
